# home_interview

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
ads/: filters.py  models.py  serializers.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_adrequest_media_files.py
ads/tests/: test_get_ad_view.py  test_get_stats_view.py
ads/tests/factories/: ad_request.py  impression.py
ads/tests/fixtures/: invalid_response.xml  valid_response.xml
envs/: .env  postgres.env
home_interview/: asgi.py  settings.py  urls.py  wsgi.py
